--- a/PROGRAM/app/src/main/res/values/colors.xml
+++ b/PROGRAM/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="title_color">#FF00B8B3</color>
 </resources>
