--- a/PROGRAM/app/src/main/res/layout/activity_main.xml
+++ b/PROGRAM/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-c<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,6 +22,7 @@ c<?xml version="1.0" encoding="utf-8"?>
         android:id="@+id/btn_menu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/title_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
