--- a/PROGRAM/app/src/main/res/layout/activity_detailedd.xml
+++ b/PROGRAM/app/src/main/res/layout/activity_detailedd.xml
@@ -28,6 +28,15 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="8dp">
 
+        <ImageView
+
+            android:id="@+id/detailImage"
+            android:layout_width="400dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/DUGONG2"/>
 
     </androidx.cardview.widget.CardView>
 
