--- a/PROGRAM/app/src/main/res/layout/fragment_info.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_info.xml
@@ -17,9 +17,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/head_title_info"
+            android:textColorLink="#FFFFFF"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="332dp"
+            android:src="@drawable/laut"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
