--- a/PROGRAM/app/src/main/res/layout/fragment_home.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_home.xml
@@ -17,14 +17,29 @@
             android:id="@+id/btn_info"
             android:layout_width="414dp"
             android:layout_height="84dp"
+            android:layout_marginTop="4dp"
+            android:backgroundTint="@color/title_color"
+            android:fontFamily="@font/poppins_extrabold"
             android:text="Informasi Laut di Indonesia"
             android:textAlignment="textEnd"
-            android:textSize="20dp"
+            android:textSize="21dp"
             android:textStyle="bold"
-            android:fontFamily="@font/poppins_extrabold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <ImageButton
+            android:id="@+id/img_btn"
+            android:layout_width="55dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="24dp"
+            android:background="#00FFFFFF"
+            android:scaleType="fitStart"
+            android:src="@drawable/water_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_info"
+            app:layout_constraintStart_toStartOf="@+id/btn_info"
+            app:layout_constraintTop_toTopOf="@+id/btn_info" />
 
         <ImageView
             android:id="@+id/imageView"
