--- a/PROGRAM/app/src/main/res/values/themes.xml
+++ b/PROGRAM/app/src/main/res/values/themes.xml
@@ -4,7 +4,8 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:textSize">16sp</item>
-        <item name="android:statusBarColor">@color/title_color</item>
+        <item name="android:statusBarColor">@color/gray</item>
+        <item name="android:navigationBarColor">@color/gray</item>
     </style>
 
     <style name="Theme.SeaCare" parent="Base.Theme.SeaCare" />
