--- a/PROGRAM/app/src/main/res/layout/item_layout.xml
+++ b/PROGRAM/app/src/main/res/layout/item_layout.xml
@@ -6,13 +6,15 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="20dp"
     android:layout_marginHorizontal="10dp"
+    android:background="@color/white"
     android:layout_marginVertical="10dp"
     app:cardElevation="8dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/Base">
 
         <ImageView
             android:layout_width="100dp"
@@ -32,7 +34,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/title"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:text="Title"
             android:layout_marginStart="20dp"
             app:layout_constraintStart_toEndOf="@id/image"
