--- a/PROGRAM/app/src/main/res/layout/activity_main.xml
+++ b/PROGRAM/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:id="@+id/search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
