--- a/PROGRAM/app/src/main/res/layout/item_layout.xml
+++ b/PROGRAM/app/src/main/res/layout/item_layout.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/title"
             android:textColor="@color/black"
-            android:textSize="17sp"
+            android:textSize="15sp"
+            android:textStyle="bold"
             android:text="Title"
             android:layout_marginStart="20dp"
             app:layout_constraintStart_toEndOf="@id/image"
