--- a/PROGRAM/app/src/main/res/layout/fragment_home.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_home.xml
@@ -35,65 +35,51 @@
         app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
         <FrameLayout
+            android:id="@+id/frame_imgheadline"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="300dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/img_headline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/laut_indonesia" />
+        </FrameLayout>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    app:cardCornerRadius="16dp">
+        <FrameLayout
+            android:id="@+id/frm_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frame_imgheadline">
 
-                    <ImageView
-                        android:id="@+id/img_card"
-                        android:layout_width="match_parent"
-                        android:layout_height="280dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/laut_indonesia" />
+            <TextView
+                android:id="@+id/content"
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:layout_margin="10dp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet mollitia, porro laboriosam soluta repellat sed nulla voluptate quibusdam consequatur reprehenderit temporibus ratione distinctio, vel ex, illum libero. Cum, asperiores blanditiis voluptate incidunt tempora tenetur praesentium? Voluptatum, possimus ratione magni maxime et dolor, assumenda alias nam illum dolore fugit nesciunt tenetur! Nihil, animi error, blanditiis quo dolore nisi facere iusto repellendus ipsam officiis quod laborum ut reprehenderit! Recusandae, non atque tempore, voluptatibus quis minima aut obcaecati molestias nihil libero neque accusantium? Exercitationem, amet! Aperiam accusamus aliquid eaque in dignissimos voluptates, eos magnam praesentium facere laborum. Ipsum quos laborum rerum autem omnis sed soluta, quo consectetur nihil cupiditate dignissimos quod facere deleniti neque minima quas modi eius saepe exercitationem alias sit nam expedita at tenetur. Beatae porro non atque sint omnis dolor, perspiciatis id debitis. Voluptates, esse voluptas? Quidem ab voluptatibus id fugiat eum iure labore hic, consectetur accusantium, vero nesciunt perspiciatis. Explicabo aliquam nulla quaerat? Fuga veritatis saepe vel. Aperiam fugit quaerat veritatis, quia magni impedit! Nihil et quibusdam a assumenda amet mollitia consequuntur, praesentium vel iste voluptates accusantium magnam illum facilis maiores recusandae fugiat saepe eum, sunt unde dolores quis temporibus? Illum sapiente natus reiciendis architecto eveniet ratione cum quam." />
+        </FrameLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="90dp"
-                        android:layout_gravity="bottom"
-                        android:background="@color/title_color"
-                        android:orientation="vertical"
-                        android:padding="10dp">
+        <FrameLayout
+            android:id="@+id/frm_btn"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frm_text">
 
-                        <TextView
-                            android:id="@+id/text_info"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:contentDescription="contdesc"
-                            android:text="Informasi Laut di Indonesia"
-                            android:textColor="@color/white"
-                            android:textSize="25dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:contentDescription="contdesc"
-                            android:text="Rabu, 3 maret 2024"
-                            android:textColor="@color/white"
-                            android:textSize="16dp"
-                            android:textStyle="italic"/>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-
-
-            </ScrollView>
-
+            <Button
+                android:id="@+id/button_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center"
+                android:text="Selengkapnya ->" />
         </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <!-- TODO: Update blank fragment layout -->
