--- a/PROGRAM/app/src/main/res/layout/fragment_info.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_info.xml
@@ -98,7 +98,7 @@
                         android:layout_height="130dp"
                         android:layout_marginTop="16dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/oip" />
+                        android:src="@drawable/sun" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -111,6 +111,7 @@
                             android:id="@+id/news_heading_2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
                             android:text="Informasi laut yang perlu dilindungi"
                             android:textSize="16sp"
                             android:paddingRight="10dp"
@@ -141,7 +142,7 @@
                         android:layout_height="130dp"
                         android:layout_marginTop="16dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ikan_laut" />
+                        android:src="@drawable/ikann" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -154,6 +155,7 @@
                             android:id="@+id/news_heading_3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
                             android:text="Potensi Sumber Daya Kelautan Indonesia"
                             android:textSize="16sp"
                             android:paddingRight="10dp"
@@ -197,6 +199,7 @@
                             android:id="@+id/news_heading_4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
                             android:text="Potensi Sumber Daya Kelautan Indonesia"
                             android:textSize="16sp"
                             android:paddingRight="10dp"
@@ -227,7 +230,7 @@
                         android:layout_height="130dp"
                         android:layout_marginTop="16dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ikan_laut" />
+                        android:src="@drawable/paus" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -240,6 +243,7 @@
                             android:id="@+id/news_heading_5"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
                             android:text="Potensi Sumber Daya Kelautan Indonesia"
                             android:textSize="16sp"
                             android:paddingRight="10dp"
