--- a/PROGRAM/app/src/main/res/layout/fragment_info.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_info.xml
@@ -156,7 +156,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
-                            android:text="Potensi Sumber Daya Kelautan Indonesia"
+                            android:text="Informasi penyebab kerusakan pada laut"
                             android:textSize="16sp"
                             android:paddingRight="10dp"
                             android:textStyle="bold" />
@@ -167,7 +167,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:paddingRight="10dp"
-                            android:text="Indonesia memiliki potensi sumber daya kelautan yang sangat besar, termasuk keanekaragaman hayati dan sumber daya alam yang melimpah."
+                            android:text=" Penyebab: Pencemaran, penangkapan ikan berlebihan, kerusakan habitat, perubahan iklim.
+                            Dampak: Hilangnya biota laut, air laut tercemar, bencana alam, & dampak sosial ekonomi."
                             android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
